gcc/testsuite/rust/rustc/ui/privacy/private-in-public-non-principal.rs
#![feature(auto_traits)]
#![feature(negative_impls)]
#![allow(non_local_definitions)]

pub trait PubPrincipal {}
auto trait PrivNonPrincipal {}

pub fn leak_dyn_nonprincipal() -> Box<dyn PubPrincipal + PrivNonPrincipal> { loop {} }
// { dg-warning "" "" { target *-*-* } .-1 }

#[deny(missing_docs)]
fn container() {
    impl dyn PubPrincipal {
        pub fn check_doc_lint() {} // { dg-error "" "" { target *-*-* } }
    }
    impl dyn PubPrincipal + PrivNonPrincipal {
        pub fn check_doc_lint() {} // OK, no missing doc lint
    }
}

fn main() {}

